<resources>
    <string name="app_name">RADQ Companion App</string>
    <string name="notifications_button">Notifications</string>
    <string name="contact_created">Contact created</string>
    <string name="contact_name">Name</string>
    <string name="account_email" translatable="false">Email</string>
    <string name="account_password">Password</string>
    <string name="create_account">Create account</string>
    <string name="create_account_description">Create a new account</string>
    <string name="my_account_description">Login to your RADQ account or create a new one</string>
    <string name="fall_detected_text">Fall detected!</string>
    <string name="contacts_contacted">"Contacts contacted!"</string>
    <string name="account_created">Account created!</string>
    <string name="contact_password">Password</string>
    <string name="settings_title">Settings</string>
    <string name="contact_description">Add a safe contact that will receive updates from RADQ</string>
    <string name="alarms_title">Alarms</string>
    <string name="alarms_description">Configure ou adicione alarmes</string>
    <string name="set_alarm">New Alarm</string>
    <string name="notifications_title">Notifications</string>
    <string name="welcome_title">Welcome to RADQ Companion!</string>
    <string name="welcome_description">This application is intended for contacts of users that use the RADQ Robot. It shows you all the notifications from the robots you were added as a contact.</string>
    <string name="camera">Camera</string>
    <string name="save_bttn_settings">Save</string>
    <string name="switch_FrontBackCamera_txt">Activate back camera?</string>
    <string name="emergency_title">Emergency</string>
    <string name="imOkay">I\'m Okay!</string>
    <string name="imNotOkay">HELP!</string>
    <string name="emergency_contact_will_be_contacted">Emergency contact will be contacted in</string>
    <string name="app_initials" translatable="false">RADQ</string>
    <string name="notifications_description">Notificações geradas pelo RADQ</string>
    <string name="secondsTxt">" seconds"</string>
    <string name="settings_description">Add or change your emergency contact and more!</string>
    <string name="contactName">Name</string>
    <string name="contact_email">Email</string>
    <string name="groupName">Aden Radq</string>
    <string name="groupEmail">radq@aden.com.br</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="person_detected_text">Person detected!</string>
    <string name="contact_alert_dialog_message">You must add a contact in the settings page before using RADQ</string>
    <string name="contact_alert_dialog_title">No contacts found</string>
    <string name="positive_button" translatable="false">OK</string>
    <string name="invalid_password">Weak password. Please use a stronger and longer password.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="unknown_error_contact_register">Unknown error registering the contact</string>
    <string name="logout_button">Logout</string>
    <string name="login_button">Login</string>
    <string name="default_alert_dialog_title">Alert!</string>
    <string name="create_account_button">Create account</string>
    <string name="login_description">Sign in to connect to your safe contact. If you don\'t have an account, create one using the bottom button.</string>
    <string name="create_account_title">Create account</string>
    <string name="my_account_title">My account</string>
    <string name="my_contacts_title">My contacts</string>
    <string name="add_contact_button">Add a contact</string>
    <string name="unknown_error_camera_initialization">Unknown error initializing camera</string>
    <string name="add_contacts_title">Add contacts</string>
    <string name="add_contact_email">Add contact email</string>
    <string name="save_button">Save</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="error_no_email">Please type a valid email</string>
    <string name="error_contact_not_found">No contact found with provided email</string>
    <string name="error_empty_name_field">Please provide a name</string>
    <string name="error_empty_email_field">Please provide a valid email</string>
    <string name="error_empty_password_field">Please provide a password</string>
    <string name="alert_not_logged_title">Not logged</string>
    <string name="alert_not_logged_message">Looks like you are not logged. Please login to access RADQ.</string>
    <string name="contact_added_successfully">Contact added successfully</string>
    <string name="unknown_error_adding_contact">Unknown error adding contact</string>
    <string name="logged_out">Logged out</string>
    <string name="logged_in">Logged in!</string>
    <string name="unknown_error_logging_in">Unknown error while logging in</string>
    <string name="aW1va2F5YnV0dG9ucHJlc3NlZA">Button \"I\'m okay\" pressed after fall detected or after alarm went off.</string>
    <string name="aW1ub3Rva2F5YnV0dG9ucHJlc3NlZA">Button \"HELP\" pressed after fall detected or after alarm went off.</string>
    <string name="YnV0dG9ubm90cHJlc3NlZHRpbWVzb3Zlcg">Buttons not pressed. Time\'s over. After fall detected or after alarm went off.</string>
    <string name="access_account">Access your account</string>
    <string name="disconnect_before_proceed">Please, logout from your current session before proceed.</string>
</resources>